--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "zustand": "^4.5.0"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
